[tool.poetry]
name = "ffwrapped-fe"
version = "0.1.0"
description = ""
authors = [
    "kevniu95 <kniu@uchicago.edu>"
]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.13,<4"
dash-bootstrap-components = "^1.7.1"
numpy = "^2.2.3"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"